
2009-03-18  Sancho Lerena <slerena@artica.es>

	* operation/projects/project_tree.php,
	* include/functions_graph.php: Fixed proyect tree links.

2009-03-03  Sancho Lerena <slerena@artica.es>

	* include/funcions_db.php: Solved a problem returning a simple user, now
	returns the whole array record for it or the single name, as requested in
	get_user_visible_users() function.
	
	* include/functions_form.php: Hide company combo for external
	users.

	* include/functions_form.php
	  include/functions_incidents.php
          include/functions_db.php
          operation/incidents/incident_detail.php
          operation/main_menu.php
          operation/inventories/inventory_search.php
          general/header.php: Small changes for better external user isolation.

2009-02-25  Sancho Lerena <lserena@artica.es>

	* general/error_perms.php: Typo fixed. This is Beta2 officially.

2009-02-23  Sancho Lerena  <slerena@artica.es>

	*  operation/incidents/incident_detail.php: SLA Alert removed when
	update or add any workunit to an incident.

	* integria_db.sql: Fixed a possible problem with Mysql FK creation.

	* functions_db.php: Support for external usermode. Fixed some problems with
	rendering of status and resolution in mail. Fixed probles due enterprise
	call wihout table reference. Added creator on count of active incidents. 
	Added new functions to render resolution and status.
	
	* functions_form.php: Default search is now "non-closed incidents" that
	groups status 1-5. Fixed repeated info on incident side menu info and 
	reordered other info.
	
	* include/config_process.php: Added support for incident_reporter switch.
	
	* include/functions_incidents.php: Added support for external users,
	better text search (now by creator, and owner username), and support for
	search on "non closed incidents" special status code -10.
	
	* operation/incidents/incident.php: Fixed JS code for automatic selection
	on search/status on incident.
	